--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<!-- skill bar 1 -->
 							<div class="skill-bar" data-percentage="90%">
 								<h4 class="progress-title-holder">
-									<span class="progress-title">Photoshop</span>
+									<span class="progress-title">bALSAMIQ</span>
 									<span class="progress-wrapper">
 										<span class="progress-mark">
 											<span class="percent"></span>
@@ -190,7 +190,7 @@
 							<!-- skill bar 1 -->
 							<div class="skill-bar" data-percentage="80%">
 								<h4 class="progress-title-holder">
-									<span class="progress-title">Illustrator</span>
+									<span class="progress-title">PHOTOSHOP</span>
 									<span class="progress-wrapper">
 										<span class="progress-mark">
 											<span class="percent"></span>
@@ -209,7 +209,7 @@
 							<br>
 							<div class="skill-bar" data-percentage="80%">
 								<h4 class="progress-title-holder">
-									<span class="progress-title">html & css</span>
+									<span class="progress-title">ILLUSTRATOR</span>
 									<span class="progress-wrapper">
 										<span class="progress-mark">
 											<span class="percent"></span>
@@ -223,7 +223,7 @@
 							<!-- skill bar 2 -->
 							<div class="skill-bar" data-percentage="60%">
 								<h4 class="progress-title-holder">
-									<span class="progress-title">javascript</span>
+									<span class="progress-title">HTML & CSS</span>
 									<span class="progress-wrapper">
 										<span class="progress-mark">
 											<span class="percent"></span>
