--- a/light-blog-details.html
+++ b/light-blog-details.html
@@ -108,19 +108,23 @@
 								<img src="assets/img/blog/large.jpg" alt="" />
 							</div>
 							<div class="text">
-								<h3 class="font-26 montserrat weight-medium capitalize mb-10">The standard Lorem Ipsum passage, used since the 1500s</h3>
-								<h5 class="capitalize montserrat weight-regular no-margin">Date : <span class="montserrat-600">30 Jun 2017</span> By <span class="montserrat-600">Jonathon</span></h5>
-								<p class="ptb-40">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla paria</p>
+								<h3 class="font-26 montserrat weight-medium capitalize mb-10">UX Design Process 2021: List Of Free Tools</h3>
+								<h5 class="capitalize montserrat weight-regular no-margin">Date : <span class="montserrat-600">30 Jun 2022
+									
+								</span> By <span class="montserrat-600">Jonathon</span></h5>
+								<p class="ptb-40">The design of the website has nothing to do with being nice if its UX is bad. There are millions of websites that show mind-blowing designs on a piece of paper but do so bad on the web. During the UX design process which generally involves concept, research, definition, prototype, and test; the usage of different tools increases audience engagement and conversation rates.
+
+									So for this designing process, designers are always in a search of tools that are free to use and yet make their design more appealing to the targeted audience. Once again  has covered you by providing a list of free tools that you can use to make stellar UX design.</p>
 								<div class="separate relative">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ip voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur </p>
+									<p>The concept is the first and most crucial step of the design. Every designer starts any project with a thoughtful concept. This may include questions like how do you envision your product attracting the audience? Having a concept of the project gives you a road map of all the steps you need to follow during your UX designing process.</p>
 								</div>
 								<ul class="mt-50 mb-40">
-									<li>1. Maecenas nec quam quis libero malesuada eleifend.</li>
-									<li>2. Curabitur hendrerit mauris ac lacus egestas pharetra..</li>
-									<li>3. In vitae sapien eu tortor fermentum porttitor et a ante..</li>
-									<li>4. Sed malesuada risus at fermentum lobortis.</li>
+									<li>1. So for making a list of all the important points obviously.</li>
+									<li>2.  you will be needing a pen and paper.</li>
+									<li>3. Jotting down all the elements would help you to be more organized and structured during your UX design.</li>
+									<li>4. Be paintent when you Reaserch on topic</li>
 								</ul>
-								<p class="mb-60">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ip voluptatem quia voptas sit aspernatur aut odit aut fugit, sed quia consequuntur </p>
+								<p class="mb-60">Muzli by InVision provides you free marvelous design projects. You can discover the best web design inspiration, best websites, best logos, web trends, best mobiles sites and applications, minimalist websites, brutalist websites, innovative illustrations, design features, unique websites, photography projects, and visual art, as well as opinions and articles from design experts across the web and around the world. You can also add this tool to your chrome as an extension. </p>
 							</div>
 						</div>
 						<div class="related-post">
