--- a/light-blog-details.html
+++ b/light-blog-details.html
@@ -111,7 +111,7 @@
 								<h3 class="font-26 montserrat weight-medium capitalize mb-10">UX Design Process 2021: List Of Free Tools</h3>
 								<h5 class="capitalize montserrat weight-regular no-margin">Date : <span class="montserrat-600">30 Jun 2022
 									
-								</span> By <span class="montserrat-600">Jonathon</span></h5>
+								</span> By <span class="montserrat-600">Muhammad Usman</span></h5>
 								<p class="ptb-40">The design of the website has nothing to do with being nice if its UX is bad. There are millions of websites that show mind-blowing designs on a piece of paper but do so bad on the web. During the UX design process which generally involves concept, research, definition, prototype, and test; the usage of different tools increases audience engagement and conversation rates.
 
 									So for this designing process, designers are always in a search of tools that are free to use and yet make their design more appealing to the targeted audience. Once again  has covered you by providing a list of free tools that you can use to make stellar UX design.</p>
