--- a/light-blog-details.html
+++ b/light-blog-details.html
@@ -170,10 +170,10 @@
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
-								<li><a href="http://www.facebook.com/" target="_blank">Facebook</a></li>
-								<li><a href="http://www.twitter.com/" target="_blank">Twitter</a></li>
-								<li><a href="http://www.linkedin.com/" target="_blank">Linkden</a></li>
-								<li><a href="mailto:regaltheme@gmail.com" target="_blank">Email</a></li>
+								<li><a href="https://web.facebook.com/engrshaniii" target="_blank">Facebook</a></li>
+								<li><a href="https://www.instagram.com/engr_shaniii" target="_blank">instagram</a></li>
+								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
+								<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
 							</ul>
 						</div>
 					</div>
