--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								Experience.
 							</p>
 							<div class="about-button mt-30">
-								<a class="btn" href="assets/Resume/MUHAMMAD USMAN UI UX.pdf">Download Resume</a>
+								<a class="btn" href="assets/Resume/MUHAMMAD USMAN UI UX RESUME.pdf">Download Resume</a>
 							</div>
 						</div>
 					</div>
