--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 							<a href="light-blog-details.html"><img src="assets/img/blog/1.jpg" alt="Blog Image" /></a>
 							<div class="date-comment plr-20 ptb-20 clearfix">
 								<div class="left floatleft">
-									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2017</h6>
+									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2021</h6>
 								</div>
 								<div class="right floatright">
 									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-comments"></i> 5 Comments</h6>
@@ -620,7 +620,7 @@
 							<a href="light-blog-details.html"><img src="assets/img/blog/2.jpg" alt="Blog Image" /></a>
 							<div class="date-comment plr-20 ptb-20 clearfix">
 								<div class="left floatleft">
-									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2017</h6>
+									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2021</h6>
 								</div>
 								<div class="right floatright">
 									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-comments"></i> 5 Comments</h6>
@@ -643,7 +643,7 @@
 							<a href="light-blog-details.html"><img src="assets/img/blog/3.jpg" alt="Blog Image" /></a>
 							<div class="date-comment plr-20 ptb-20 clearfix">
 								<div class="left floatleft">
-									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2017</h6>
+									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2021</h6>
 								</div>
 								<div class="right floatright">
 									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-comments"></i> 5 Comments</h6>
@@ -732,7 +732,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="left floatleft">
-							<p>Copyright &copy; 2017 <a href="https://themeforest.net/user/regaltheme" target="_blank">Regaltheme</a>.</p>
+							<p>Copyright &copy; 2022 <a href="#" target="_blank"> Muhammad Usman. Made with </a> <i class="fa fa-heart" aria-hidden="true"></i>.</p>
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
