--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="left floatleft">
-							<p>Copyright &copy; 2022 <a href="#" target="_blank"> Muhammad Usman. Made with </a> <i class="fa fa-heart" aria-hidden="true"></i>.</p>
+							<p>Copyright &copy; 2022 <a href="#" target="_blank"> Muhammad Usman. </a> .</p>
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
