--- a/Snooker App Mobile Design.html
+++ b/Snooker App Mobile Design.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
     
-<!-- Mirrored from regaltheme.com/tf/onepage/mim/mim/light-blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Dec 2022 15:15:56 GMT -->
+<!-- Mirrored from regaltheme.com/tf/onepage/mim/mim/light-portfolio-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Dec 2022 15:15:54 GMT -->
 <head>
 		<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
         <meta name="keywords" content="Personal , Personal portfolio template, Personal portfolio, landing page, material design, portfolio, personal">
         <meta name="author" content="regaltheme.com">
 		
-        <title>Light Blog Details || Mim</title>
+        <title>Light Portfolio Details || Mim</title>
 		
 		<!-- favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -45,7 +45,7 @@
 		<div id="home"></div>
 		
 		<!-- Header Section Start -->
-		<header class="header-style-1 blog-details light-bg">
+		<header class="header-style-1 portfolio-details light-bg">
 			<div class="top clearfix">
 				<div class="header-top active-sticky ptb-50">
 					<div class="container">
@@ -98,68 +98,56 @@
 			</div>
 		</header>
 		<!-- Header Section End -->
-		<!-- Blog Details Section Start -->
-		<div class="blog-details-area light-bg section-padding">
+		<!-- Portfolio Details Section Start -->
+		<div class="portfolio-details-area light-bg section-padding">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-sm-10 col-text-center">
-						<div class="single-post">
-							<div class="img mb-60">
-								<img src="assets/img/blog/large.jpg" alt="" />
-							</div>
-							<div class="text">
-								<h3 class="font-26 montserrat weight-medium capitalize mb-10">UX Design Process 2021: List Of Free Tools</h3>
-								<h5 class="capitalize montserrat weight-regular no-margin">Date : <span class="montserrat-600">30 Jun 2022
-									
-								</span> By <span class="montserrat-600">Muhammad Usman</span></h5>
-								<p class="ptb-40">The design of the website has nothing to do with being nice if its UX is bad. There are millions of websites that show mind-blowing designs on a piece of paper but do so bad on the web. During the UX design process which generally involves concept, research, definition, prototype, and test; the usage of different tools increases audience engagement and conversation rates.
-
-									So for this designing process, designers are always in a search of tools that are free to use and yet make their design more appealing to the targeted audience. Once again  has covered you by providing a list of free tools that you can use to make stellar UX design.</p>
-								<div class="separate relative">
-									<p>The concept is the first and most crucial step of the design. Every designer starts any project with a thoughtful concept. This may include questions like how do you envision your product attracting the audience? Having a concept of the project gives you a road map of all the steps you need to follow during your UX designing process.</p>
-								</div>
-								<ul class="mt-50 mb-40">
-									<li>1. So for making a list of all the important points obviously.</li>
-									<li>2.  you will be needing a pen and paper.</li>
-									<li>3. Jotting down all the elements would help you to be more organized and structured during your UX design.</li>
-									<li>4. Be paintent when you Reaserch on topic</li>
-								</ul>
-								<p class="mb-60">Muzli by InVision provides you free marvelous design projects. You can discover the best web design inspiration, best websites, best logos, web trends, best mobiles sites and applications, minimalist websites, brutalist websites, innovative illustrations, design features, unique websites, photography projects, and visual art, as well as opinions and articles from design experts across the web and around the world. You can also add this tool to your chrome as an extension. </p>
-							</div>
+					<div class="col-xs-12 col-sm-8">
+						<div class="portfolio-description single-post">
+							<h3 class="font-26 montserrat weight-medium capitalize">Snooker Pool App</h3>
+							<p>
+								This game app is designed like this. In real sense people go to clubs and play snooker.
+								 The interesting thing is that with the help of this app we can play the game with any good player in our city. 
+								 As the interface of this app is designed, we can select the time and date, so this game is very interesting, 
+								 we can select the club of our choice. </p>
 						</div>
-						<div class="related-post">
+					</div>
+					<div class="col-xs-12 col-sm-4">
+						<div class="portfolio-sidebar pt-45">
+							<ul>
+								<li><span>Client :</span> <p>Orbiqon</p></li>
+								<li><span>Created By :</span> <p> Muhammad Usman</p></li>
+								<li><span>Completed :</span> <p>10 aug 2022</p></li>
+								<li><span>Skill :</span> <p>Figma </p></li>
+								<li><span>Services :</span> <p>Mobile Game Design</p></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<div class="project-gallery pt-80">
 							<div class="row">
-								<div class="col-xs-12 col-sm-4 mobile-mb-30">
-									<div class="single-related-post">
-										<a href="light-blog-details.html"><img src="assets/img/blog/d1.jpg" alt="Post Image" /></a>
-										<a href="light-blog-details.html">
-											<h4 class="capitalize montserrat no-margin mt-20 weight-regular">Suffered alteration in some</h4>
-										</a>
-									</div>
+								<div class="col-xs-12 col-sm-6 mb-30">
+									<a href="assets/img/portfolio/details/s1.png" class="fancybox">
+										<img src="assets/img/portfolio/details/s1.png" alt="Project Image" />
+									</a>
 								</div>
-								<div class="col-xs-12 col-sm-4 mobile-mb-30">
-									<div class="single-related-post">
-										<a href="light-blog-details.html"><img src="assets/img/blog/d2.jpg" alt="Post Image" /></a>
-										<a href="light-blog-details.html">
-											<h4 class="capitalize montserrat no-margin mt-20 weight-regular">Suffered alteration in some</h4>
-										</a>
-									</div>
+								<div class="col-xs-12 col-sm-6 mb-30">
+									<a href="assets/img/portfolio/details/s2.png" class="fancybox">
+										<img src="assets/img/portfolio/details/s2.png" alt="Project Image" />
+									</a>
 								</div>
-								<div class="col-xs-12 col-sm-4 mobile-mb-30">
-									<div class="single-related-post">
-										<a href="light-blog-details.html"><img src="assets/img/blog/d3.jpg" alt="Post Image" /></a>
-										<a href="light-blog-details.html">
-											<h4 class="capitalize montserrat no-margin mt-20 weight-regular">Suffered alteration in some</h4>
-										</a>
-									</div>
-								</div>
+							</div>
+							<div class="row">
+
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- Blog Details Section End -->
+		<!-- Footer Section End -->
 		<!-- Footer Section Start -->
 		<footer class="footer bg-color-1 ptb-20">
 			<div class="container">
@@ -207,5 +195,5 @@
         <script src="assets/js/main.js"></script>
     </body>
 
-<!-- Mirrored from regaltheme.com/tf/onepage/mim/mim/light-blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Dec 2022 15:15:58 GMT -->
+<!-- Mirrored from regaltheme.com/tf/onepage/mim/mim/light-portfolio-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Dec 2022 15:15:56 GMT -->
 </html>
