--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								Experience.
 							</p>
 							<div class="about-button mt-30">
-								<a class="btn" href="assets/Resume/MUHAMMAD USMAN UI UX RESUME.pdf">Download Resume</a>
+								<a class="btn" href="assets/Resume/MUHAMMAD USMAN UI UX.pdf">Download Resume</a>
 							</div>
 						</div>
 					</div>
@@ -344,20 +344,7 @@
 							</div>
 						</div>
 						<div class="portfolio-grid">
-							<div class="grid-item new gallery percent-33">
-								<div class="single-portfolio overlay light-1 text-center">
-									<img src="assets/img/portfolio/w1.jpg" alt="Mim" />
-									<div class="zoom-icon">
-										<a href="assets/img/portfolio/w1.jpg" class="fancybox">
-											<i class="zmdi zmdi-filter-center-focus"></i>
-										</a>
-									</div>
-									<div class="project-title text-left">
-										<h4 class="font-20 montserrat weight-regular capitalize no-margin">Wireframe</h4>
-										<p class="montserratlight">Balsamiq</p>
-									</div>
-								</div>
-							</div>
+							
 							<div class="grid-item new work3d design gallery work3d percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/h1.jpg" alt="Mim" />
@@ -395,7 +382,7 @@
 									<img src="assets/img/portfolio/w3.jpg" alt="Mim" />
 									<div class="title plr-40 text-center">
 										<div class="zoom-icon">
-											<a href="https://www.behance.net/gallery/140787929/Food-Delivery-App">
+											<a href="Food App detail page.html">
 												<i class="zmdi zmdi-link"></i>
 											</a>
 										</div>
@@ -438,6 +425,63 @@
 									</div>
 								</div>
 							</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+							<div class="grid-item new web gallery percent-33">
+								<div class="single-portfolio overlay light-1 text-center">
+									<img src="assets/img/portfolio/w4.jpg" alt="Mim" />
+									<div class="title plr-40 text-center">
+										<div class="zoom-icon">
+											<a href="assets/img/portfolio/w4.jpg" class="fancybox">
+												<i class="zmdi zmdi-filter-center-focus"></i>
+											</a>
+										</div>
+										<div class="project-title text-left">
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin"></h4>
+											<p class="montserratlight"></p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="grid-item new design web work3d percent-33">
+								<div class="single-portfolio overlay light-1 text-center">
+									<img src="assets/img/portfolio/w1.jpg" alt="Mim" />
+									<div class="title plr-40 text-center">
+										<div class="zoom-icon">
+											<a href="car wash Balsamiq wireframe details.html">
+												<i class="zmdi zmdi-link"></i>
+											</a>
+										</div>
+										<div class="project-title text-left">
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Balsamiq Wireframe</h4>
+											<p class="montserratlight">Wireframe</p>
+										</div>
+									</div>
+								</div>
+							</div>
+
+
+
 							<div class="grid-item new design web work3d percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/w5.jpg" alt="Mim" />
@@ -454,6 +498,28 @@
 									</div>
 								</div>
 							</div>
+
+
+							<div class="grid-item new design web work3d percent-33">
+								<div class="single-portfolio overlay light-1 text-center">
+									<img src="assets\img\portfolio\s2.png" alt="Mim" />
+									<div class="title plr-40 text-center">
+										<div class="zoom-icon">
+											<a href="Snooker App Mobile Design.html">
+												<i class="zmdi zmdi-link"></i>
+											</a>
+										</div>
+										<div class="project-title text-left">
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Snooker Game UI</h4>
+											<p class="montserratlight">Mobile App</p>
+										</div>
+									</div>
+								</div>
+							</div>
+
+
+
+
 						</div>
 					</div>
 				</div>
@@ -597,7 +663,7 @@
 							<a href="light-blog-details.html"><img src="assets/img/blog/1.jpg" alt="Blog Image" /></a>
 							<div class="date-comment plr-20 ptb-20 clearfix">
 								<div class="left floatleft">
-									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2021</h6>
+									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2017</h6>
 								</div>
 								<div class="right floatright">
 									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-comments"></i> 5 Comments</h6>
@@ -620,7 +686,7 @@
 							<a href="light-blog-details.html"><img src="assets/img/blog/2.jpg" alt="Blog Image" /></a>
 							<div class="date-comment plr-20 ptb-20 clearfix">
 								<div class="left floatleft">
-									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2021</h6>
+									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2017</h6>
 								</div>
 								<div class="right floatright">
 									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-comments"></i> 5 Comments</h6>
@@ -643,7 +709,7 @@
 							<a href="light-blog-details.html"><img src="assets/img/blog/3.jpg" alt="Blog Image" /></a>
 							<div class="date-comment plr-20 ptb-20 clearfix">
 								<div class="left floatleft">
-									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2021</h6>
+									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-calendar"></i> 20 Jun 2017</h6>
 								</div>
 								<div class="right floatright">
 									<h6 class="capitalize montserrat no-margin weight-regular"><i class="zmdi zmdi-comments"></i> 5 Comments</h6>
@@ -732,7 +798,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="left floatleft">
-							<p>Copyright &copy; 2022 <a href="#" target="_blank"> Muhammad Usman. </a> .</p>
+							<p>Copyright &copy; 2022 <a href="" target="_blank">engr_shaniii</a>.</p>
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
