--- a/light-portfolio-details.html
+++ b/light-portfolio-details.html
@@ -165,7 +165,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<div class="left floatleft">
-							<p>Copyright &copy; 2017 <a href="https://themeforest.net/user/regaltheme" target="_blank">Regaltheme</a>.</p>
+							<p>Copyright &copy; 2022 <a href="" target="_blank">engr_shaniii</a>.</p>
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
