--- a/Food App detail page.html
+++ b/Food App detail page.html
@@ -130,13 +130,13 @@ Feel free to give me some feedback. </p>
 						<div class="project-gallery pt-80">
 							<div class="row">
 								<div class="col-xs-12 col-sm-6 mb-30">
-									<a href="assets/img/portfolio/details/f1.png" class="fancybox">
-										<img src="assets/img/portfolio/details/f1.png" alt="Project Image" />
+									<a href="assets/img/portfolio/details/f1.jpg" class="fancybox">
+										<img src="assets/img/portfolio/details/f1.jpg" alt="Project Image" />
 									</a>
 								</div>
 								<div class="col-xs-12 col-sm-6 mb-30">
-									<a href="assets/img/portfolio/details/f2.png" class="fancybox">
-										<img src="assets/img/portfolio/details/f2.png" alt="Project Image" />
+									<a href="assets/img/portfolio/details/f2.jpg" class="fancybox">
+										<img src="assets/img/portfolio/details/f2.jpg" alt="Project Image" />
 									</a>
 								</div>
 							</div>
