--- a/Snooker App Mobile Design.html
+++ b/Snooker App Mobile Design.html
@@ -129,13 +129,13 @@
 						<div class="project-gallery pt-80">
 							<div class="row">
 								<div class="col-xs-12 col-sm-6 mb-30">
-									<a href="assets/img/portfolio/details/s1.png" class="fancybox">
-										<img src="assets/img/portfolio/details/s1.png" alt="Project Image" />
+									<a href="assets/img/portfolio/details/s1.jpg" class="fancybox">
+										<img src="assets/img/portfolio/details/s1.jpg" alt="Project Image" />
 									</a>
 								</div>
 								<div class="col-xs-12 col-sm-6 mb-30">
-									<a href="assets/img/portfolio/details/s2.png" class="fancybox">
-										<img src="assets/img/portfolio/details/s2.png" alt="Project Image" />
+									<a href="assets/img/portfolio/details/s2.jpg" class="fancybox">
+										<img src="assets/img/portfolio/details/s2.jpg" alt="Project Image" />
 									</a>
 								</div>
 							</div>
