--- a/Car wash details page.html
+++ b/Car wash details page.html
@@ -104,23 +104,29 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-8">
 						<div class="portfolio-description single-post">
-							<h3 class="font-26 montserrat weight-medium capitalize">Hungry app design</h3>
+							<h3 class="font-26 montserrat weight-medium capitalize">Car Wash Mobile Design</h3>
 							<p>
-								Hi Friends! 👋
-
-This is my exploration of Food Finding. I called it Foodidi. You can easily order or book every time & everywhere. Hope you guys like it. Cheers! ✨
-
-Feel free to give me some feedback. </p>
+								Car wash Mobile App
+This project is about a Startup focusing on door-to-door
+ car cleaning service. Car owners can easily schedule
+ their car clearing at their palace only in a few minutes
+ by using the app.There are two features in the car wash 
+app. One is the facility of immediate car wash, and the
+ other one can schedule a time for it.
+In the searching feature, it will automatically search for 
+the suitable car washer for you and it will be allocated 
+to you.You can select your desired time and date which
+ best for you. </p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4">
 						<div class="portfolio-sidebar pt-45">
 							<ul>
-								<li><span>Client :</span> <p>Freelancing</p></li>
+								<li><span>Client :</span> <p>Orbiqon</p></li>
 								<li><span>Created By :</span> <p> Muhammad Usman</p></li>
-								<li><span>Completed :</span> <p>22 Mar 2022</p></li>
+								<li><span>Completed :</span> <p>18 Nov 2022</p></li>
 								<li><span>Skill :</span> <p>Figma </p></li>
-								<li><span>Services :</span> <p>Mobile Design</p></li>
+								<li><span>Services :</span> <p>Mobile  Design</p></li>
 							</ul>
 						</div>
 					</div>
@@ -130,13 +136,13 @@ Feel free to give me some feedback. </p>
 						<div class="project-gallery pt-80">
 							<div class="row">
 								<div class="col-xs-12 col-sm-6 mb-30">
-									<a href="assets/img/portfolio/details/f1.jpg" class="fancybox">
-										<img src="assets/img/portfolio/details/f1.jpg" alt="Project Image" />
+									<a href="assets/img/portfolio/details/C1.jpg" class="fancybox">
+										<img src="assets/img/portfolio/details/C1.jpg" alt="Project Image" />
 									</a>
 								</div>
 								<div class="col-xs-12 col-sm-6 mb-30">
-									<a href="assets/img/portfolio/details/f2.jpg" class="fancybox">
-										<img src="assets/img/portfolio/details/f2.jpg" alt="Project Image" />
+									<a href="assets/img/portfolio/details/C2.jpg" class="fancybox">
+										<img src="assets/img/portfolio/details/C2.jpg" alt="Project Image" />
 									</a>
 								</div>
 							</div>
