--- a/car wash Balsamiq wireframe details.html
+++ b/car wash Balsamiq wireframe details.html
@@ -155,10 +155,9 @@
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
-								<li><a href="https://web.facebook.com/engrshaniii" target="_blank">Facebook</a></li>
-								<li><a href="https://www.instagram.com/engr_shaniii" target="_blank">instagram</a></li>
-								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
 								<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
+								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
+								<li class="fa fa-whatsapp" aria-hidden="true"><a href="https://wa.me/%2B923143586834" target="_blank">Chat on Whatsapp</a></li>	
 							</ul>
 						</div>
 					</div>
