--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 									<img src="assets/img/portfolio/h1.jpg" alt="Mim" />
 									<div class="title plr-40 text-center">
 										<div class="zoom-icon">
-											<a href="https://www.behance.net/gallery/157393133/Car-Wash-Mobile-Design">
+											<a href="Car wash details page.html">
 												<i class="zmdi zmdi-link"></i>
 											</a>
 										</div>
@@ -361,22 +361,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="grid-item web design web gallery percent-33">
-								<div class="single-portfolio overlay light-1 text-center">
-									<img src="assets/img/portfolio/w2.jpg" alt="Mim" />
-									<div class="title plr-40 text-center">
-										<div class="zoom-icon">
-											<a class="various fancybox" data-fancybox-type="iframe" title="The Butterfly And Flower" href="https://www.youtube.com/embed/zQ9tVUEI4J4?&amp;autoplay=1">
-												<i class="zmdi zmdi-play"></i>
-											</a>
-										</div>
-										<div class="project-title text-left">
-											<h4 class="font-20 montserrat weight-regular capitalize no-margin">The Butterfly And Flower</h4>
-											<p class="montserratlight">Video</p>
-										</div>
-									</div>
-								</div>
-							</div>
+							
+						
 							<div class="grid-item new web gallery work3d percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/w3.jpg" alt="Mim" />
@@ -403,8 +389,8 @@
 											</a>
 										</div>
 										<div class="project-title text-left">
-											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Contrary to popular belief</h4>
-											<p class="montserratlight">Branding</p>
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Online store</h4>
+											<p class="montserratlight">Mobile App design</p>
 										</div>
 									</div>
 								</div>
@@ -802,10 +788,9 @@
 						</div>
 						<div class="right social-link floatright">
 							<ul class="clearfix">
-								<li><a href="https://web.facebook.com/engrshaniii" target="_blank">Facebook</a></li>
-								<li><a href="https://www.instagram.com/engr_shaniii" target="_blank">instagram</a></li>
-								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
 								<li><a href="mailto:engrshaniii@gmail.com" target="_blank">Email</a></li>
+								<li><a href="https://www.linkedin.com/in/engrshaniii/" target="_blank">Linkden</a></li>
+								<li class="fa fa-whatsapp" aria-hidden="true"><a href="https://wa.me/%2B923143586834" target="_blank">Chat on Whatsapp</a></li>	
 							</ul>
 						</div>
 					</div>
