--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="grid-item new web gallery percent-33">
+							<div class="grid-item new design web gallery work3d percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/w4.jpg" alt="Mim" />
 									<div class="title plr-40 text-center">
@@ -405,35 +405,13 @@
 											</a>
 										</div>
 										<div class="project-title text-left">
-											<h4 class="font-20 montserrat weight-regular capitalize no-margin"></h4>
-											<p class="montserratlight"></p>
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Landing page</h4>
+											<p class="montserratlight">LWeb Designn</p>
 										</div>
 									</div>
 								</div>
 							</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-							
 							<div class="grid-item new design web work3d percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/w1.jpg" alt="Mim" />
