--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 										</div>
 										<div class="project-title text-left">
 											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Landing page</h4>
-											<p class="montserratlight">LWeb Designn</p>
+											<p class="montserratlight">Web Design</p>
 										</div>
 									</div>
 								</div>
