--- a/light-portfolio-details.html
+++ b/light-portfolio-details.html
@@ -104,7 +104,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-8">
 						<div class="portfolio-description single-post">
-							<h3 class="font-26 montserrat weight-medium capitalize">Talent Hunt Programe</h3>
+							<h3 class="font-26 montserrat weight-medium capitalize">Talent Hunt Program</h3>
 							<p>
 								The main purpose of creating this platform is that the economic conditions of Pakistan are not getting jobs. So, keeping this goal in mind, a platform was created where youth can find jobs based on their skills and develop Pakistan.
 								 The purpose of this website is only for good. The Talent Hunt program is a freelancer platform where 
