--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 							<div class="single-experi mb-50">
 								<div class="left-text floatleft relative">
 									<div class="dashed-line"></div>
-									<h4 class="montserrat weight-medium mb-5 capitalize">Orbiqon, Lahore, Pakistan</h4>
+									<h4 class="montserrat weight-medium mb-5 capitalize">Orbiqon, LHR, PK</h4>
 									<p class="montserrat weight-medium">2022-PRESENT</p>
 								</div>
 								<div class="right-text">
@@ -272,7 +272,7 @@
 							</div>
 							<div class="single-experi">
 								<div class="left-text floatleft">
-									<h4 class="montserrat weight-medium mb-5 capitalize">KFUEIT,Pakistan</h4>
+									<h4 class="montserrat weight-medium mb-5 capitalize">KFUEIT,PK</h4>
 									<p class="montserrat weight-medium">2021</p>
 								</div>
 								<div class="right-text">
@@ -288,7 +288,7 @@
 							<div class="single-experi mb-50">
 								<div class="left-text floatleft relative">
 									<div class="dashed-line"></div>
-									<h4 class="montserrat weight-medium mb-5 capitalize">Godesign, Islamabad, Pakistan</h4>
+									<h4 class="montserrat weight-medium mb-5 capitalize">Godesign, ISB,PK</h4>
 									<p class="montserrat weight-medium">2021-2022</p>
 								</div>
 								<div class="right-text">
