--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
 									<div class="progress-content"></div>
 								</div>
 							</div>
+
+							
+							</div>
 							<!-- skill bar 2 -->
 							<div class="skill-bar" data-percentage="60%">
 								<h4 class="progress-title-holder">
@@ -233,6 +236,9 @@
 								<div class="progress-outter">
 									<div class="progress-content"></div>
 								</div>
+							</div>
+
+							
 							</div>
 						</div>
 					</div>
