--- a/index.html
+++ b/index.html
@@ -220,9 +220,6 @@
 									<div class="progress-content"></div>
 								</div>
 							</div>
-
-							
-							</div>
 							<!-- skill bar 2 -->
 							<div class="skill-bar" data-percentage="60%">
 								<h4 class="progress-title-holder">
@@ -237,9 +234,6 @@
 									<div class="progress-content"></div>
 								</div>
 							</div>
-
-							
-							</div>
 						</div>
 					</div>
 				</div>
@@ -247,7 +241,7 @@
 		</section>
 		<!-- About Section End -->
 		<!-- Experience Section Start -->
-		<section class="experience-area section-padding bg-color-1">
+	<section class="experience-area section-padding bg-color-1">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12">
@@ -320,6 +314,7 @@
 				</div>
 			</div>
 		</section>
+
 		<!-- Experience Section End -->
 		<!-- Portfolio Section Start -->
 		<section class="portfolio-area portfolio-one light-bg section-padding clearfix" id="portfolio">
@@ -401,7 +396,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="grid-item new design web gallery work3d percent-33">
+							<div class="grid-item new web gallery percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/w4.jpg" alt="Mim" />
 									<div class="title plr-40 text-center">
@@ -411,13 +406,50 @@
 											</a>
 										</div>
 										<div class="project-title text-left">
-											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Landing page</h4>
-											<p class="montserratlight">Web Design</p>
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin"></h4>
+											<p class="montserratlight"></p>
 										</div>
 									</div>
 								</div>
 							</div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+							<div class="grid-item new web gallery percent-33">
+								<div class="single-portfolio overlay light-1 text-center">
+									<img src="assets/img/portfolio/w4.jpg" alt="Mim" />
+									<div class="title plr-40 text-center">
+										<div class="zoom-icon">
+											<a href="assets/img/portfolio/w4.jpg" class="fancybox">
+												<i class="zmdi zmdi-filter-center-focus"></i>
+											</a>
+										</div>
+										<div class="project-title text-left">
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin"></h4>
+											<p class="montserratlight"></p>
+										</div>
+									</div>
+								</div>
+							</div>
 							<div class="grid-item new design web work3d percent-33">
 								<div class="single-portfolio overlay light-1 text-center">
 									<img src="assets/img/portfolio/w1.jpg" alt="Mim" />
