--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<h5 class="mb-11">Hello, my name is</h5>
 								<h1 class="mb-30">Muhammad Usman</h1>
 								<p class="font-16 line-height-28">
-									 I’m a UI/UX Designer from Pakistan.I hold a master degree of Computer Science from the IUB. But I must explain to you how all this mistaken idea of.
+									I’m a UI/UX Designer from Pakistan. I hold a master's degree in Computer Science from the IUB. But I must explain to you how all this mistaken idea of.
 								</p>
 								<div class="slider-button smooth-scroll mt-40">
 									<a class="btn lg-btn" href="#portfolio">my work</a>
@@ -266,8 +266,9 @@
 								<div class="right-text">
 									<i class="zmdi zmdi-check-circle"></i>
 									<h3 class="capitalize font-20">UI/UX Designer</h3>
-									<p>Produce site map, user flows, wireframes,Visual Design, Prototyping, 
-										page layouts. </p>
+									<p>Plan and conduct user research and competitor analysis,
+										Create user stories, personas, and storyboards Create 
+										prototypes. </p>
 								</div>
 							</div>
 							<div class="single-experi">
@@ -278,7 +279,8 @@
 								<div class="right-text">
 									<i class="zmdi zmdi-check-circle"></i>
 									<h3 class="capitalize font-20">Web & Mobile Design</h3>
-									<p>3 months Internship </p>
+									<p>Develop theory in design and practice in the world of work. 
+										And find out what designs are often used. </p>
 								</div>
 							</div>
 						</div>
@@ -294,8 +296,9 @@
 								<div class="right-text">
 									<i class="zmdi zmdi-check-circle"></i>
 									<h3 class="capitalize font-20"> Associate UI UX Designer</h3>
-									<p>Produce site map, user flows, wireframes,Visual Design, Prototyping, 
-										page layouts. </p>
+									<p>Produced A Creative Website Layouting,Created Design, 
+										Concept and Sample Layout, Developed Graphic Design 
+										and Layout For Product Illustrations </p>
 								</div>
 							</div>
 							<div class="single-experi">
@@ -306,7 +309,8 @@
 								<div class="right-text">
 									<i class="zmdi zmdi-check-circle"></i>
 									<h3 class="capitalize font-20">Graphic Designer</h3>
-									<p>eye-catching and creative posts for social media plateform </p>
+									<p>Contributed ideas for brand campaigns
+										Responsible for designed visually compelling digital and print project </p>
 								</div>
 							</div>
 						</div>
