--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 								</div>
 								<div class="right-text">
 									<i class="zmdi zmdi-check-circle"></i>
-									<h3 class="capitalize font-20">Web & Mobile Design</h3>
+									<h3 class="capitalize font-20">Web Development Intern</h3>
 									<p>Develop theory in design and practice in the world of work. 
 										And find out what designs are often used. </p>
 								</div>
