--- a/Snooker App Mobile Design.html
+++ b/Snooker App Mobile Design.html
@@ -115,7 +115,7 @@
 					<div class="col-xs-12 col-sm-4">
 						<div class="portfolio-sidebar pt-45">
 							<ul>
-								<li><span>Client :</span> <p>Orbiqon</p></li>
+								<li><span>Client :</span> <p>Personal project</p></li>
 								<li><span>Created By :</span> <p> Muhammad Usman</p></li>
 								<li><span>Completed :</span> <p>10 aug 2022</p></li>
 								<li><span>Skill :</span> <p>Figma </p></li>
