--- a/index.html
+++ b/index.html
@@ -471,12 +471,12 @@
 									<img src="assets\img\portfolio\s2.png" alt="Mim" />
 									<div class="title plr-40 text-center">
 										<div class="zoom-icon">
-											<a href="Snooker App Mobile Design.html">
+											<a href="Phone Cleaner App.html">
 												<i class="zmdi zmdi-link"></i>
 											</a>
 										</div>
 										<div class="project-title text-left">
-											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Snooker Game UI</h4>
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Phone Cleaner App</h4>
 											<p class="montserratlight">Mobile App</p>
 										</div>
 									</div>
