--- a/Phone Cleaner App.html
+++ b/Phone Cleaner App.html
@@ -105,21 +105,28 @@
 					<div class="col-xs-12 col-sm-8">
 						<div class="portfolio-description single-post">
 							<h3 class="font-26 montserrat weight-medium capitalize">Snooker Pool App</h3>
-							<p>
-								This game app is designed like this. In real sense people go to clubs and play snooker.
-								 The interesting thing is that with the help of this app we can play the game with any good player in our city. 
-								 As the interface of this app is designed, we can select the time and date, so this game is very interesting, 
-								 we can select the club of our choice. </p>
+							<p>Background: 
+A new startup is developing a mobile app aimed at helping users keep their phones clean and optimized. The app, called Phone Cleaner, will scan the phone for unnecessary files, duplicate files, and unused apps and provide users with options to clean them up and free up storage space.
+Problem: The startup wants to design a user-friendly and visually appealing mobile app that will effectively communicate the features and benefits of Phone Cleaner.
+Solution:
+User Research: The design team conducted user research to understand the target audience and their pain points related to phone storage. This helped the team to identify the key features and functions that would be important for users.
+Wireframing: The team created wireframes to outline the basic structure
+Visual Design: Based on the wireframes and user research, the design team created a visual design that was modern, clean, and visually appealing. The visual design incorporated flat design elements and bright, contrasting colours to make the app look polished and professional.
+Icon Design: Custom icons were created to help users easily identify different functions and features within the app. The icons were designed to be simple, clear, and easy to understand.
+Typography: A clean and modern typeface was selected to be used throughout the app, and clear, legible typography was used to ensure that the app was easy to read and understand.
+Interaction Design: The team worked to ensure that the app was intuitive and easy to use. This was achieved by incorporating clear and concise on-screen instructions and by designing interactions that were straightforward to follow.
+Testing: The app was tested with users to ensure that it was user-friendly and that it effectively communicated the features and benefits of Phone Cleaner. Feedback was used to make improvements to the design, and to ensure that the app was meeting the needs of the target audience.
+ </p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4">
 						<div class="portfolio-sidebar pt-45">
 							<ul>
-								<li><span>Client :</span> <p>Personal project</p></li>
+								<li><span>Client :</span> <p>Techpartner</p></li>
 								<li><span>Created By :</span> <p> Muhammad Usman</p></li>
-								<li><span>Completed :</span> <p>10 aug 2022</p></li>
+								<li><span>Completed :</span> <p>05 Feb 2023</p></li>
 								<li><span>Skill :</span> <p>Figma </p></li>
-								<li><span>Services :</span> <p>Mobile Game Design</p></li>
+								<li><span>Services :</span> <p>Mobile App design</p></li>
 							</ul>
 						</div>
 					</div>
