--- a/Ace Union Onboarding & Signup.html
+++ b/Ace Union Onboarding & Signup.html
@@ -108,41 +108,45 @@
 				<div class="col-xs-12 col-sm-8">
 					<div class="portfolio-description single-post">
 						<h3 class="font-26 montserrat weight-medium capitalize">Mobile Cleaner App</h3>
-						<p>Background: <br>
-							A new startup is developing a mobile app aimed at helping users keep their phones clean and
-							optimized. The app, called Phone Cleaner, will scan the phone for unnecessary files,
-							duplicate files, and unused apps and provide users with options to clean them up and free up
-							storage space.<br>
-							Problem:<br> The startup wants to design a user-friendly and visually appealing mobile app
-							that
-							will effectively communicate the features and benefits of Phone Cleaner.
+						<p><br>Background:<br> A financial services company is developing a money transfer app that allows users
+							to send and receive money from their mobile devices. To use the app, users need to create an
+							account and sign in.<br><br>
 
-							<br>User Research:<br> The design team conducted user research to understand the target
-							audience and
-							their pain points related to phone storage. This helped the team to identify the key
-							features and functions that would be important for users.
-							Wireframing: The team created wireframes to outline the basic structure
-							Visual Design: Based on the wireframes and user research, the design team created a visual
-							design that was modern, clean, and visually appealing. The visual design incorporated flat
-							design elements and bright, contrasting colours to make the app look polished and
-							professional.<br>
-							Icon Design:<br> Custom icons were created to help users easily identify different functions
-							and
-							features within the app. The icons were designed to be simple, clear, and easy to
-							understand.<br>
-							Typography:<br> A clean and modern typeface was selected to be used throughout the app, and
-							clear, legible typography was used to ensure that the app was easy to read and understand.
-							Interaction Design: The team worked to ensure that the app was intuitive and easy to use.
-							This was achieved by incorporating clear and concise on-screen instructions and by designing
-							interactions that were straightforward to follow.<br>
-							Interaction Design: <br> The interaction design of Phone Cleaner was developed with a focus on
-							ease of use and intuitive navigation. The design team created animations and visual effects
-							to help users understand the app’s functions and to create a more engaging experience.
-							<br>Testing:<br> The app was tested with users to ensure that it was user-friendly and that
-							it
-							effectively communicated the features and benefits of Phone Cleaner. Feedback was used to
-							make improvements to the design, and to ensure that the app was meeting the needs of the
-							target audience.
+							Problem:<br> The company wants to design a user-friendly and secure sign-in and sign-up process
+							for the money transfer app.
+
+							<br><br>Solution:<br>
+
+							<br>User Research:<br> The design team conducted user research to understand the target audience and
+							their pain points related to creating an account and signing in to mobile apps. This helped
+							the team to identify the key features and functions that would be important for users.
+
+							<br><br>Wireframing:<br> The team created wireframes to outline the basic structure and layout of the
+							sign-in and sign-up process, including the main screens and navigation. The wireframes were
+							reviewed and iterated on based on feedback from the user research.
+
+							<br><br>Visual Design:<br> The visual design of the sign-in and sign-up process was developed with a
+							clean, minimalist style, using a combination of typography, icons, and color to create a
+							visually appealing and modern look.
+
+							<br><br>Interaction Design:<br> The interaction design of the sign-in and sign-up process was developed
+							with a focus on ease of use and security. The design team created animations and visual
+							effects to guide users through the process and make it easy for them to understand what they
+							need to do.
+
+							<br><br>User Testing:<br> The team conducted user testing to gather feedback on the design and
+							functionality of the sign-in and sign-up process. Based on this feedback, the design was
+							iterated on and refined to ensure that it met the needs and expectations of users.
+
+							<br><br>Final Design:<br> The final design of the sign-in and sign-up process was a user-friendly and
+							secure experience that effectively communicated the app’s security measures and provided
+							users with a seamless and enjoyable experience.
+
+							<br><br>The money transfer app was a success and received positive feedback from users, who
+							appreciated the app’s easy-to-use and secure sign-in and sign-up process. The app’s clean
+							and minimalist design, combined with its effective communication of security measures,
+							helped to set it apart from its competitors and make it a popular choice for money
+							transfers.
 						</p>
 					</div>
 				</div>
@@ -173,13 +177,13 @@
 					<div class="project-gallery pt-80">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s1.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s1.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/ace1.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/ace1.jpg" alt="Project Image" />
 								</a>
 							</div>
 							<div class="col-xs-12 col-sm-6 mb-30">
-								<a href="assets/img/portfolio/details/s2.jpg" class="fancybox">
-									<img src="assets/img/portfolio/details/s2.jpg" alt="Project Image" />
+								<a href="assets/img/portfolio/details/ace2.jpg" class="fancybox">
+									<img src="assets/img/portfolio/details/ace2.jpg" alt="Project Image" />
 								</a>
 							</div>
 						</div>
