--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 									<img src="assets/img/portfolio/w3.jpg" alt="Mim" />
 									<div class="title plr-40 text-center">
 										<div class="zoom-icon">
-											<a href="moeny transfer.html">
+											<a href="Ace Union Onboarding & Signup.html">
 												<i class="zmdi zmdi-link"></i>
 											</a>
 										</div>
@@ -381,6 +381,15 @@
 											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Money Trasfer mobile design</h4>
 											<p class="montserratlight">Mobile App</p>
 										</div>
+										<!-- <div class="zoom-icon">
+											<a href="moeny transfer.html">
+												<i class="zmdi zmdi-link"></i>
+											</a>
+										</div>
+										<div class="project-title text-left">
+											<h4 class="font-20 montserrat weight-regular capitalize no-margin">Money Trasfer mobile design</h4>
+											<p class="montserratlight">Mobile App</p>
+										</div> -->
 									</div>
 								</div>
 							</div>
